# justine-bank-bot

./: README.md  pyproject.toml
justine_bank/: commands.py  constants.py  localization.py  main.py  models.py  settings.py  utils.py
locales/en/LC_MESSAGES/: justine-bank-bot.po
locales/es/LC_MESSAGES/: justine-bank-bot.po
