[tool.poetry]
name = "justine-bank-bot"
version = "0.2.0"
description = ""
authors = ["Javier Gallo <javier_rooster@yahoo.com.ar>"]
readme = "README.md"
packages = [{include = "justine_bank"}]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.7"
ormar = {extras = ["sqllite"], version = "^0.12.2"}
aiosqlite = "^0.19.0"
pydantic = {version = "1.10.8", extras = ["dotenv"]}
typer = "^0.9.0"

[tool.poetry.scripts]
justine = "justine_bank.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
